# bincode-io

./: Cargo.toml  README.md  lib.rs
examples/: struct.rs  variable.rs  vec.rs
src/: lib.rs
