[package]
name = "bincode-io"
version = "0.1.0"
edition = "2024"
description = "Simple way to save and load Rust structs to binary files."
license = "MIT"
repository = "https://github.com/everhaze/bincode-io"
keywords = ["bincode", "serialize", "deserialize", "io", "save-load"]

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.228", features = ["derive"] }
